--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
 	"compilerOptions": {
 		"declaration": true,
 		"declarationDir": "./dist",
-		"module": "ES2015",
+		"module": "commonjs",
 		"noImplicitAny": true,
 		"strict": true,
 		"outDir": "./dist",
-		"target": "es6"
+		"target": "es6",
+		"skipLibCheck": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "./src/worker.ts"]
 }
